<resources>
    <string name="app_name">Firebase</string>
    <string name="enter_password">Enter password…</string>
    <string name="enter_email">Enter valid email…</string>
    <string name="forgot">forgot password</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="error">Field must be filled</string>
    <string name="signFail">Sign in failed</string>
    <string name="emsuc">Email was successfully sent!</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="conf_password">Confirm password</string>
    <string name="signout">sign out</string>
    <string name="open">open</string>
    <string name="locTrackOn">Location tracking is on</string>
    <string name="lockTrackOff">Location is no longer tracked</string>
    <string name="GpsOn">Using GPS towers</string>
    <string name="GpsOff"><![CDATA[Using WIFI & Cell Towers]]></string>
    <string name="trackloc">Tracked locations</string>
    <string name="opengoogle">open google map</string>
    <string name="settings">Settings</string>
    <string name="imageError">Error getting the image</string>
    <string name="uppright">Processing the image</string>
    <string name="upimg">Uploading the image</string>
    <string name="upfail">Upload failed</string>
    <string name="registerPasswordFail">Password registration failed</string>
    <string name="emfail">Email was not sent</string>
    <string name="emailincorrect">Email is incorrect</string>
    <string name="gspPerm">gspPerm</string>
    <string name="gpsNoGo">gspNoGo</string>
    <string name="locReq">locReq</string>
    <string name="maPerm">maPerm</string>
    <string name="NoWork">NoWork</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_polyline">Add PolyLine</string>
    <string name="noperms">No sufficient permissions</string>
    <string name="signSuc">Signed in successfully, but email is not verified</string>
</resources>